--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -58,7 +58,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>MeHaloCoA is an open source R package </p>that fasten the detection of Cl or Br in LC-hrMS data by usingtheir distinct isotpoic profil and their mass defect
+        <p>MeHaloCoA is an open source R package </p>that fasten the detection of Cl or Br in LC-hrMS data by using their distinct isotpoic profil and their mass defect
 
 <p>Finding Cl or Br containing compounds in LC-MS data is "simple" you just have to see if the isotopic profil match Cl or Br. But making that annotation manually is time consuming. MeHaloCoA simplifies the process of manual annotation providing a higher-quality peak list in less time.</p>
 
@@ -68,7 +68,7 @@
                     <p>
                         <b>Download MeHaloCoA</b>
                         <br>
-                        <span><script type="text/javascript">document.write(getDownloadOSLabel())</script>for Windows</span>
+                        <span><script type="text/javascript">document.write(getDownloadOSLabel())</script> </span>
                         <a href="/MeHaloCoA/download/" title="alternative download options">more</a>
                         </p>
                 </div>
