--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -98,9 +98,9 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
 <p>MeHaloCoA was created by members of the <a href="http://www.sciences.univ-nantes.fr/ThalassOMICS/">ThalassOMICS core facility</a> at the <a href="http://www.univ-nantes.fr/">University of Nantes</a>. The project is funded by <a href="http://www.paysdelaloire.fr/">Région Pays de la Loire</a></p>
 
 <div style="height:100px;">
-	<div style="width: 100px; float: left; padding: 10px;"><a href="http://www.univ-nantes.fr/"><img src="images/Université_de_Nantes_(logo).svg" width="100"></a></div>
-	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.sciences.univ-nantes.fr/ThalassOMICS/"><img src="images/thalassomics anim 2.gif" width="140"></a></div>
-	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.paysdelaloire.fr"><img src="images/pdl-logo.jpg" width="140"></a></div>
+	<div style="width: 100px; float: left; padding: 10px;"><a href="http://www.univ-nantes.fr/" target="_blank"><img src="images/Université_de_Nantes_(logo).svg" width="100"></a></div>
+	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.sciences.univ-nantes.fr/ThalassOMICS/" target="_blank"><img src="images/thalassomics anim 2.gif" width="140"></a></div>
+	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.paysdelaloire.fr"><img src="images/pdl-logo.jpg" target="_blank" width="140"></a></div>
 	<div style="width: 120px; float: left; padding: 10px;"><img src="images/chimimar-logo.png" width="100"></div>
 </div>
 <br></br>
@@ -133,7 +133,7 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">MeHaloCoA maintained by <a href="https://github.com/yguitton">yguitton</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
       </footer>
     </div>
 
