--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -98,7 +98,7 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
 <p>MeHaloCoA was created by members of the <a href="http://www.sciences.univ-nantes.fr/ThalassOMICS/">ThalassOMICS core facility</a> at the <a href="http://www.univ-nantes.fr/">University of Nantes</a>. The project is funded by <a href="http://www.paysdelaloire.fr/">Région Pays de la Loire</a></p>
 
 <div style="height:100px;">
-	<div style="width: 100px; float: left; padding: 10px;"><a href="http://www.univ-nantes.fr/" target="_blank"><img src="images/Université_de_Nantes_(logo).svg" width="100"></a></div>
+	<div style="width: 100px; float: left; padding: 10px;"><a href="http://www.mms.univ-nantes.fr/" target="_blank"><img src="images/Université_de_Nantes_(logo).svg" width="100"></a></div>
 	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.sciences.univ-nantes.fr/ThalassOMICS/" target="_blank"><img src="images/thalassomics anim 2.gif" width="140"></a></div>
 	<div style="width: 140px; float: left; padding: 10px;"><a href="http://www.paysdelaloire.fr"><img src="images/pdl-logo.jpg" target="_blank" width="140"></a></div>
 	<div style="width: 120px; float: left; padding: 10px;"><img src="images/chimimar-logo.png" width="100"></div>
@@ -107,25 +107,29 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
 
 
 <h5>Screenshots</h5>
-
+<div style="width: 300px; float: center; padding: 10px;"><img src="images/R_Gui_Mehalocoa.png"" width="300"></div>
 
 <h5>Key Features</h5>
-
+<p><strong>MeHaloCoA</strong> is available as an <a href="http://cran.r-project.org/" target="_blank">R</a> package. It is also designed to work inside a Graphical User Interface (see screen shot).
+A <a href="http://galaxyproject.org/" target="_blank"> Galaxy </a> implementation is also available in the metabolomics toolshed</p>
 <h5>Steps</h5>
 
-<p>Step 1:</p>
+<!--<p>Step 1:</p>-->
 
 <ul>
 <li>
-<a href="http://sbml.org/">step1</a> (first step)</li>
+<a href="">Step1</a> Peakpicking*</li>
 <li>
-<a href="http://sbml.org/">step1</a> (first step)</li>
-<li>test</li>
-</ul><p>Include all xcms preprocessing</p>
+<a href="">Step2</a> Isotope detection & annotation</li>
 
+</ul><p>*Include all xcms preprocessing</p>
+<h5>Outputs</h5>
+<h5>Tests data</h5>
+<a href="">Here</a> you can find LC-hrMS data for testing.
+<p>A sample LC-hrMS file is available in the R package</p>
 <h5>Projects</h5>
 
-<p>Step 1:</p>
+<p><a href="http://cran.r-project.org/web/packages/MSeasy/index.html" target="_blank">MSeasy</a>: GC-MS spectra clustering using HCA</p>
 </section>
     </div>
 
