Newpicture for download
Download folder picture changed with Galaxy
Add<pre>section for install code

--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -49,7 +49,7 @@
           <h2 id="project_tagline">Halogenated (Cl & Br) containing compounds search in LC-hrMS</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yguitton/MeHaloCoA/zipball/master">Download source code as a .zip file</a>
+              <a class="zip_download_link" href="https://github.com/yguitton/MeHaloCoA/galaxy/master">Download Galaxy files</a>
               <a class="tar_download_link" href="https://github.com/yguitton/MeHaloCoA/tarball/master">Download source code as a tar.gz file</a>
             </section>
         </header>
@@ -92,6 +92,9 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
                 </div>
             </div>
 
+<h5>Installation under R</h5>
+<pre>install.packages("MeHaloCoA_1.4.tar.gz", type="source", repos=NULL)
+library("MeHaloCoA")</pre>
 
 <h5>Acknowledgement</h5>
 
