index change for download

--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -49,7 +49,7 @@
           <h2 id="project_tagline">Halogenated (Cl & Br) containing compounds search in LC-hrMS</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yguitton/MeHaloCoA/galaxy/master">Download Galaxy files</a>
+              <a class="zip_download_link" href="https://github.com/yguitton/MeHaloCoAgalaxy/tarball/master">Download Galaxy files</a>
               <a class="tar_download_link" href="https://github.com/yguitton/MeHaloCoA/tarball/master">Download source code as a tar.gz file</a>
             </section>
         </header>
@@ -87,7 +87,7 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
                         <b>Download MeHaloCoA</b>
                         <br>
                         <span><script type="text/javascript">document.write(getDownloadOSLabel())</script> </span>
-                        <a href="/MeHaloCoA/download/" title="alternative download options">more</a>
+                        <a href="download/" title="alternative download options">more</a>
                         </p>
                 </div>
             </div>
