--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -93,8 +93,16 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
             </div>
 
 <h5>Installation under R</h5>
+From source file dowloaded here
 <pre>install.packages("MeHaloCoA_1.4.tar.gz", type="source", repos=NULL)
 library("MeHaloCoA")</pre>
+or from github
+<pre>
+install.packages("devtools")
+library(devtools)
+install_github("yguitton/mehalocoa")
+library(MeHaloCoA)
+</pre>
 
 <h5>Acknowledgement</h5>
 
