--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -94,7 +94,7 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
 
 <h5>Installation under R</h5>
 From source file dowloaded here
-<pre>install.packages("MeHaloCoA_1.4.tar.gz", type="source", repos=NULL)
+<pre>install.packages("yguitton-MeHaloCoA-XXXXXX.tar.gz", type="source", repos=NULL)
 library("MeHaloCoA")</pre>
 or from github
 <pre>
