download links update

--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -22,12 +22,12 @@
         // directs to windows or mac specific downloads, defaults to the jar
         function download(){
             if (navigator.appVersion.indexOf("Win")!=-1) {
-                window.location.href='MeHaloCoA.zip';
+                window.location.href='./download/MeHaloCoA_0.99.2.tar.gz';
             }
             else if (navigator.appVersion.indexOf("Mac")!=-1){
-                window.location.href='MeHaloCoA.tar.gz';
+                window.location.href='./download/MeHaloCoA_0.99.2.tar.gz';
             } else {             
-                window.location.href='MeHaloCoA.tar.gz';                
+                window.location.href='./download/MeHaloCoA_0.99.2.tar.gz';                
             }
         }
         
