--- a/MeHaloCoA/index.html
+++ b/MeHaloCoA/index.html
@@ -87,7 +87,7 @@ mass of an element and the mass of its A+1 or its A+2 isotopic cluster."><em>mas
                         <b>Download MeHaloCoA</b>
                         <br>
                         <span><script type="text/javascript">document.write(getDownloadOSLabel())</script> </span>
-                        <a href="download/" title="alternative download options">more</a>
+                        <a href="./download/MeHaloCoA_0.99.2.tar.gz" title="alternative download options">more</a>
                         </p>
                 </div>
             </div>
