--- a/biblio/index.html
+++ b/biblio/index.html
@@ -53,7 +53,7 @@
 
         <h2>Publications</h2>
 
-        <script src="https://bibbase.org/show?bib=https://github.com/yguitton/yguitton.github.io/blob/master/biblio/mylibrary.bib&jsonp=1"></script>
+       <script src="https://bibbase.org/show?bib=https%3A%2F%2Fyguitton.github.io%2Fbiblio%2Fmylibrary.bib&jsonp=1"></script> 
 
       </div>
     </div>
