--- a/biblio/index.html
+++ b/biblio/index.html
@@ -53,8 +53,8 @@
 
         <h2>Publications</h2>
 
-       <script src="https://bibbase.org/show?bib=https%3A%2F%2Fyguitton.github.io%2Fbiblio%2Fmylibrary.bib&jsonp=1"></script> 
-
+      <!--  <script src="https://bibbase.org/show?bib=https%3A%2F%2Fyguitton.github.io%2Fbiblio%2Fmylibrary.bib&jsonp=1"></script> -->
+      <iframe src="https://bibbase.org/show?bib=https%3A%2F%2Fgithub.com%2Fyguitton%2Fyguitton.github.io%2Fblob%2Fmaster%2Fbiblio%2Fmylibrary.bib"></iframe> 
       </div>
     </div>
 
